Fix localization with node drawn objects, add in Roboto Slab

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -24,6 +24,7 @@
   "building-manufacturer": "Manufacturer",
   "building-miner": "Miner",
   "building-smelter": "Smelter",
+
   "recipe-train-docking-station": "Freight Platform",
   "recipe-train-docking-station-liquid": "Fluid Freight Platform",
   "recipe-train-platform-empty": "Empty Platform",
@@ -58,7 +59,7 @@
   "recipe-alternate-steel-rod": "Steel Rod",
   "recipe-alternate-turbo-heavy-fuel": "Turbo Heavy Fuel",
   "recipe-alternate-wet-concrete": "Wet Concrete",
-  "recipe-pure-aluminum-ingot": "Pure Aluminum Ingot",
+  "recipe-alternate-pure-aluminum-ingot": "Pure Aluminum Ingot",
   "recipe-alternate-beacon-1": "Crystal Beacon",
   "recipe-alternate-cable-1": "Insulated Cable",
   "recipe-alternate-cable-2": "Quickwire Cable",
@@ -110,7 +111,7 @@
   "recipe-rotor": "Rotor",
   "recipe-stator": "Stator",
   "recipe-uranium-cell": "Encased Uranium Cell",
-  "recipe-fence-01": "Fence 1",
+  "recipe-fence-01": "Fence",
   "recipe-foundation-8x1-01": "Foundation 8m x 1m",
   "recipe-foundation-8x2-01": "Foundation 8m x 2m",
   "recipe-foundation-8x4-01": "Foundation 8m x 4m",
@@ -153,15 +154,15 @@
   "recipe-conveyor-attachment-splitter-programmable": "Programmable Splitter",
   "recipe-conveyor-attachment-splitter-smart": "Smart Splitter",
   "recipe-conveyor-belt-mk1": "Conveyor Belt Mk.1",
-  "recipe-conveyor-belt-mk2": "Conveyor Belt Mk.1",
-  "recipe-conveyor-belt-mk3": "Conveyor Belt Mk.1",
-  "recipe-conveyor-belt-mk4": "Conveyor Belt Mk.1",
-  "recipe-conveyor-belt-mk5": "Conveyor Belt Mk.1",
+  "recipe-conveyor-belt-mk2": "Conveyor Belt Mk.2",
+  "recipe-conveyor-belt-mk3": "Conveyor Belt Mk.3",
+  "recipe-conveyor-belt-mk4": "Conveyor Belt Mk.4",
+  "recipe-conveyor-belt-mk5": "Conveyor Belt Mk.5",
   "recipe-conveyor-lift-mk1": "Conveyor Lift Mk.1",
-  "recipe-conveyor-lift-mk2": "Conveyor Lift Mk.1",
-  "recipe-conveyor-lift-mk3": "Conveyor Lift Mk.1",
-  "recipe-conveyor-lift-mk4": "Conveyor Lift Mk.1",
-  "recipe-conveyor-lift-mk5": "Conveyor Lift Mk.1",
+  "recipe-conveyor-lift-mk2": "Conveyor Lift Mk.2",
+  "recipe-conveyor-lift-mk3": "Conveyor Lift Mk.3",
+  "recipe-conveyor-lift-mk4": "Conveyor Lift Mk.4",
+  "recipe-conveyor-lift-mk5": "Conveyor Lift Mk.5",
   "recipe-conveyor-pole": "Conveyor Pole",
   "recipe-conveyor-pole-stackable": "Stackable Conveyor Pole",
   "recipe-conveyor-pole-wall": "Conveyor Wall Mount",
@@ -177,13 +178,13 @@
   "recipe-hyper-tube-wall-support": "Hyper Tube Wall Support",
   "recipe-industrial-tank": "Industrial Fluid Buffer",
   "recipe-jump-pad": "Jump Pad",
-  "recipe-jump-pad-tilted": "Jump Pad",
+  "recipe-jump-pad-tilted": "Tilted Jump Pad",
   "recipe-lookout-tower": "Lookout Tower",
   "recipe-mam": "M.A.M.",
   "recipe-manufacturer-mk1": "Manufacturer",
   "recipe-miner-mk1": "Miner Mk1",
   "recipe-miner-mk2": "Miner Mk.2",
-  "recipe-miner-mk3": "Miner Mk.2",
+  "recipe-miner-mk3": "Miner Mk.3",
   "recipe-oil-pump": "Oil Extractor",
   "recipe-oil-refinery": "Refinery",
   "recipe-pipe-hyper": "Hyper Tube",
@@ -198,14 +199,14 @@
   "recipe-pipe-support-wall-hole": "Pipeline Wall Hole",
   "recipe-power-line": "Power Line",
   "recipe-power-pole-mk1": "Power Pole Mk.1",
-  "recipe-power-pole-mk2": "Power Pole Mk.1",
-  "recipe-power-pole-mk3": "Power Pole Mk.1",
+  "recipe-power-pole-mk2": "Power Pole Mk.2",
+  "recipe-power-pole-mk3": "Power Pole Mk.3",
   "recipe-power-pole-wall": "Wall Outlet Mk.1",
   "recipe-power-pole-wall-double": "Double Wall Outlet Mk.1",
-  "recipe-power-pole-wall-double-mk2": "Double Wall Outlet Mk.1",
-  "recipe-power-pole-wall-double-mk3": "Double Wall Outlet Mk.1",
-  "recipe-power-pole-wall-mk2": "Wall Outlet Mk.1",
-  "recipe-power-pole-wall-mk3": "Wall Outlet Mk.1",
+  "recipe-power-pole-wall-double-mk2": "Double Wall Outlet Mk.2",
+  "recipe-power-pole-wall-double-mk3": "Double Wall Outlet Mk.3",
+  "recipe-power-pole-wall-mk2": "Wall Outlet Mk.2",
+  "recipe-power-pole-wall-mk3": "Wall Outlet Mk.3",
   "recipe-radar-tower": "Radar Tower",
   "recipe-railroad-track": "Railway",
   "recipe-railroad-track-integrated": "Integrated Platform Track",
@@ -320,7 +321,7 @@
   "recipe-packaged-biofuel": "Packaged Liquid Biofuel",
   "recipe-packaged-crude-oil": "Packaged Oil",
   "recipe-packaged-oil-residue": "Packaged Heavy Oil Residue",
-  "recipe-packaged-turbo-fuel": "Packaged Turbofuel",
+  "recipe-alternate-packaged-turbo-fuel": "Packaged Turbofuel",
   "recipe-packaged-water": "Packaged Water",
   "recipe-petroleum-coke": "Petroleum Coke",
   "recipe-plastic": "Plastic",
@@ -333,7 +334,7 @@
   "recipe-unpackage-fuel": "Unpackage Fuel",
   "recipe-unpackage-oil": "Unpackage Oil",
   "recipe-unpackage-oil-residue": "Unpackage Heavy Oil Residue",
-  "recipe-unpackage-turbo-fuel": "Unpackage Turbo Fuel",
+  "recipe-alternate-unpackage-turbo-fuel": "Unpackage Turbo Fuel",
   "recipe-unpackage-water": "Unpackage Water",
   "recipe-uranium-pellet": "Uranium Pellet",
   "recipe-coal": "Coal",
@@ -394,6 +395,7 @@
   "recipe-impure-ore-uranium": "Impure Uranium",
   "recipe-normal-ore-uranium": "Normal Uranium",
   "recipe-pure-ore-uranium": "Pure Uranium",
+
   "item-iron-plate-reinforced": "Reinforced Iron Plate",
   "item-modular-frame": "Modular Frame",
   "item-cable": "Cable",
