--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -680,5 +680,8 @@
   "impure_uranium_node": "Impure Uranium Node",
   "normal_uranium_node": "Normal Uranium Node",
   "pure_uranium_node": "Pure Uranium Node",
-  "no_production": "Idle"
+  "no_production": "Idle",
+  "machine-group-logistics": "Logistics",
+  "machine-group-liquid-storage": "Storage - Fluid",
+  "machine-group-item-storage": "Storage - Item"
 }
