Add node linking

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -517,6 +517,16 @@
   "building-pipeline-pump": "Pipeline Pump",
   "building-storage-container-mk1": "Storage Container",
   "building-storage-container-mk2": "Industrial Storage Container",
+  "building-pipeline": "Pipeline",
+  "building-conveyor-belt": "Conveyor Belt",
+  "tier-selector-building-conveyor-belt-mk1": "Belt MK I",
+  "tier-selector-building-conveyor-belt-mk2": "Belt MK II",
+  "tier-selector-building-conveyor-belt-mk3": "Belt MK III",
+  "tier-selector-building-conveyor-belt-mk4": "Belt MK IV",
+  "tier-selector-building-conveyor-belt-mk5": "Belt MK V",
+  "tier-selector-building-conveyor-belt-mk6": "Belt MK VI",
+  "tier-selector-building-conveyor-belt-mk7": "Belt MK VII",
+  "tier-selector-building-conveyor-belt-mk8": "Belt MK VIII",
 
   "typeRecipe": "Recipe",
   "typeItem": "Item",
