Move around some simulation stuff

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -518,7 +518,9 @@
   "building-pipeline-pump": "Pipeline Pump",
   "building-storage-container-mk1": "Storage Container",
   "building-storage-container-mk2": "Industrial Storage Container",
-  "building-pipeline": "Pipeline",
+  "building-pipeline": "Pipeline MK I",
+  "building-valve": "Valve",
+  "building-packager": "Packager",
   "building-conveyor-belt": "Conveyor Belt",
   "tier-selector-building-conveyor-belt-mk1": "Belt MK I",
   "tier-selector-building-conveyor-belt-mk2": "Belt MK II",
