Fixup edges and default graph

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -518,10 +518,10 @@
   "building-pipeline-pump": "Pipeline Pump",
   "building-storage-container-mk1": "Storage Container",
   "building-storage-container-mk2": "Industrial Storage Container",
-  "building-pipeline": "Pipeline MK I",
+  "building-pipeline": "Pipeline",
   "building-valve": "Valve",
   "building-packager": "Packager",
-  "building-conveyor-belt": "Conveyor Belt",
+  "building-conveyor-belt": "Conveyor Belt MK I",
   "tier-selector-building-conveyor-belt-mk1": "Belt MK I",
   "tier-selector-building-conveyor-belt-mk2": "Belt MK II",
   "tier-selector-building-conveyor-belt-mk3": "Belt MK III",
@@ -530,7 +530,10 @@
   "tier-selector-building-conveyor-belt-mk6": "Belt MK VI",
   "tier-selector-building-conveyor-belt-mk7": "Belt MK VII",
   "tier-selector-building-conveyor-belt-mk8": "Belt MK VIII",
-
+  "tier-selector-building-pipeline": "Pipeline MK I",
+  "tier-selector-building-pipeline-mk2": "Pipeline MK II",
+  "tier-selector-type-building-pipeline": "Pipeline",
+  "tier-selector-type-building-conveyor-belt": "Conveyor Belt",
   "typeRecipe": "Recipe",
   "typeItem": "Item",
 
